--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,5 @@
 # Get your API Key from https://www.dashboard.alchemy.com
 # Make sure to associate it with an Embedded Accounts Config at https://www.dashboard.alchemy.com/accounts
-ALCHEMY_API_KEY="ALCHEMY_API_KEY"
+ALCHEMY_API_KEY="AgGthnfyYCqX_TY4qRsYm7W2WGKG_9EY"
 # Get your Policy ID from https://www.dashboard.alchemy.com/gas-manager
-NEXT_PUBLIC_ALCHEMY_GAS_MANAGER_POLICY_ID="ALCHEMY_GAS_MANAGER_POLICY_ID"
+NEXT_PUBLIC_ALCHEMY_GAS_MANAGER_POLICY_ID="3a084b0d-61b8-4c25-8907-028894277afa"
